--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     <h1>📁 Subir Imágenes a Google Drive</h1>
     
     <p>Primero, autentícate con Google:</p>
-    <a href="/auth">
+    <a href="https://devai-production.up.railway.app/">
         <button>🔑 Autenticar con Google</button>
     </a>
     
